--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Passion+One:wght@400;700&display=swap');
 
 * {
   margin: 0;
@@ -21,8 +22,8 @@ body {
     height: 100vh;
     width: 100vw;
     background-image: linear-gradient(
-        to right,
-        rgba(121, 145, 187, 0.6),
+        to bottom,
+        rgba(0, 69, 187, 0.6),
         rgba(174, 201, 248, 0.6),
         rgba(148, 186, 252, 0.6)
       ),
@@ -31,14 +32,73 @@ body {
       background-position: center;
 }
 
+#clouds-title {
+  font-family: 'Passion One', cursive;
+  font-size: 3.5rem;
+  font-weight: 700;
+  color: white;
+
+}
+
+#clouds-main {
+  color: white;
+  /* padding: 20px; */
+  /* resize: vertical; */
+}
+
+#clouds-current {
+  background-color: rgba(44, 66, 81, .5);
+  /* color: white; */
+  /* resize: vertical; */
+}
+
+#weatherIcon {
+  max-width: 100%;
+  
+}
+
+#currentTemp {
+  font-size: 10rem;
+}
+
+#location {
+  font-weight: bolder;
+  font-size: 2rem;
+}
+
+#dayTime {
+  font-size: 1.3rem;
+}
+
+.conditions-text {
+  font-size: 1.3rem;
+}
+
 /* Media Queries */
 @media (max-width: 768px) {
     .clouds-background {
-        background-image: linear-gradient(
+      background-image: linear-gradient(
         to right,
         rgba(121, 145, 187, 0.6),
         rgba(174, 201, 248, 0.6),
         rgba(148, 186, 252, 0.6)
-      )
+      ),
+      url(./images/cloud-logo_225.png), url(./images/clouds-background_512.png);
+      background-repeat: no-repeat;
+      background-position: center;
+    }
+}
+
+@media (max-width: 425px) {
+    .clouds-background {
+      background-image: linear-gradient(
+        to right,
+        rgba(121, 145, 187, 0.6),
+        rgba(174, 201, 248, 0.6),
+        rgba(148, 186, 252, 0.6)
+      ),
+      url(./images/cloud-logo_135.png), url(./images/clouds-background_307.png);
+      background-repeat: no-repeat;
+      background-position: center;
     }
 }
